test/types/bytes/param/param-errors4.good
param-errors4.chpl:6: error: unresolved call 'bar("some string")'
param-errors4.chpl:3: note: this candidate did not match: bar(param b: bytes)
param-errors4.chpl:6: note: because actual argument #1 with type 'string'
param-errors4.chpl:3: note: is passed to formal 'param b: bytes'
